--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 Privacy Policy
 
-Last Updated:&nbsp; 09/02/2025
+Last Updated: 09/02/2025
 
 This Privacy Policy describes how your personal information is collected, used, and shared when you install or use the Sellara Bulk Discounts app (the “App”) in connection with your Shopify store.
 
